Fixed scroll bug and spacing issue

--- a/src/components/ThumbnailsPanel/ThumbnailsPanel.scss
+++ b/src/components/ThumbnailsPanel/ThumbnailsPanel.scss
@@ -13,7 +13,7 @@
 
   .row {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
   }
 
